<resources>
    <string name="app_name">Lab_MyCalculator</string>
    <string name="calculate_standard_weight">Calculate Standard Weight</string>
    <string name="gender">Gender:</string>
    <string name="height">Height:</string>
    <string name="inches">inches</string>
    <string name="female">Female</string>
    <string name="feet">feet</string>
    <string name="calculate">Calculate</string>
    <string name="male">Male</string>
</resources>