<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/calculate_standard_weight"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/genderFlow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="342dp" />

    <TextView
        android:id="@+id/inchesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="2dp"
        android:text="@string/inches"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/inchesEditText"
        tools:layout_editor_absoluteY="386dp" />

    <TextView
        android:id="@+id/heightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/height"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/feetEditText"
        tools:layout_editor_absoluteY="381dp" />

    <EditText
        android:id="@+id/feetEditText"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:ems="1"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:padding="2dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/heightTextView"
        tools:layout_editor_absoluteY="375dp" />

    <TextView
        android:id="@+id/feetTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="2dp"
        android:text="@string/feet"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/feetEditText"
        tools:layout_editor_absoluteY="386dp" />

    <EditText
        android:id="@+id/inchesEditText"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:ems="2"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        android:padding="2dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/feetTextView"
        tools:layout_editor_absoluteY="375dp" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightFlow" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/genderTextView"
        app:layout_constraintTop_toTopOf="@+id/genderTextView"
        tools:layout_editor_absoluteX="170dp">

        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/heightFlow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        app:constraint_referenced_ids="heightTextView,feetEditText,feetTextView,inchesEditText,inchesTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/genderFlow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:constraint_referenced_ids="genderTextView,genderRadioGroup"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F43636"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightFlow" />

</androidx.constraintlayout.widget.ConstraintLayout>